examples/compilation.txt
[1/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_color.cpp.o' -MF 'dotify@exe/src_color.cpp.o.d' -o 'dotify@exe/src_color.cpp.o' -c ../src/color.cpp
[2/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_format.cpp.o' -MF 'dotify@exe/src_format.cpp.o.d' -o 'dotify@exe/src_format.cpp.o' -c ../src/format.cpp
[3/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_processCommandLineArguments.cpp.o' -MF 'dotify@exe/src_processCommandLineArguments.cpp.o.d' -o 'dotify@exe/src_processCommandLineArguments.cpp.o' -c ../src/processCommandLineArguments.cpp
[4/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_styling.cpp.o' -MF 'dotify@exe/src_styling.cpp.o.d' -o 'dotify@exe/src_styling.cpp.o' -c ../src/styling.cpp
[5/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_lineParser.cpp.o' -MF 'dotify@exe/src_lineParser.cpp.o.d' -o 'dotify@exe/src_lineParser.cpp.o' -c ../src/lineParser.cpp
FAILED: dotify@exe/src_lineParser.cpp.o 
c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_lineParser.cpp.o' -MF 'dotify@exe/src_lineParser.cpp.o.d' -o 'dotify@exe/src_lineParser.cpp.o' -c ../src/lineParser.cpp
../src/lineParser.cpp: In member function ‘void lineParser::checkForAnyDelimiterInCurrentLine(std::__cxx11::string&) const’:
../src/lineParser.cpp:18:7: error: cannot convert ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘unsigned int’ in assignment
   b = line;
       ^~~~
[6/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_main.cpp.o' -MF 'dotify@exe/src_main.cpp.o.d' -o 'dotify@exe/src_main.cpp.o' -c ../src/main.cpp
[7/8] c++ -Idotify@exe -I. -I.. -I../include/ -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -std=c++14 -g -MD -MQ 'dotify@exe/src_fileReader.cpp.o' -MF 'dotify@exe/src_fileReader.cpp.o.d' -o 'dotify@exe/src_fileReader.cpp.o' -c ../src/fileReader.cpp
ninja: build stopped: subcommand failed.
